# communication_communication_cangjie_wrapper

./: BUILD.gn  README.md  README_zh.md  bundle.json
kit/IPCKit/: BUILD.gn  index.cj
mock/: ohos.rpc.cj
ohos/rpc/: BUILD.gn  ashmem.cj  cj_rpc_ffi.cj  cj_rpc_interface.cj  cj_rpc_utils.cj  error_code.cj  ipcskeleton.cj  iremote_object.cj  message_option.cj  message_sequence.cj  parcelable.cj  remote_object.cj  remote_proxy.cj  request_result.cj
test/APILevel21/rpc/: build.py
test/APILevel21/rpc/test/entry/src/main/cangjie/: cjpm.toml
test/APILevel21/rpc/test/entry/src/main/cangjie/src/: unittest_engine_pure_trunk.cj
test/APILevel21/rpc/test/entry/src/main/resources/base/element/: colors.json  strarray.json  string.json
test/APILevel21/rpc/test/entry/src/main/resources/rawfile/: page1.html
test/APILevel22/rpc/test/: profile.json
test/APILevel22/rpc/test/entry/src/main/cangjie/src/: Test_rpc.cj  test_list.cj
test/APILevel22/rpc/test/entry/src/main/resources/base/element/: boolean.json
test/APILevel22/rpc/test/entry/src/main/resources/rawfile/: test.txt
test/APILevel22/rpc/test/entry/src/main/resources/rawfile/plain_text_files/: test.txt
test/rpc/: build.py
test/rpc/test/entry/src/main/: module.json5
test/rpc/test/entry/src/main/cangjie/src/: Test_rpc.cj  unittest_engine_pure_trunk.cj
test/rpc/test/entry/src/main/resources/rawfile/: page2.html
