# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.rpc") {
  sources = [
    "ashmem.cj",
    "cj_rpc_ffi.cj",
    "cj_rpc_interface.cj",
    "cj_rpc_utils.cj",
    "error_code.cj",
    "ipcskeleton.cj",
    "iremote_object.cj",
    "message_option.cj",
    "message_sequence.cj",
    "remote_object.cj",
    "remote_proxy.cj",
    "request_result.cj",
  ]

  cj_external_deps = [
    "cangjie_api:ohos.ffi",
    "cangjie_api:ohos.labels",
    "arkui_cangjie_api:ohos.base",
    "hiviewdfx_cangjie_api:ohos.hilog",
  ]

  external_deps = [ "ipc:cj_ipc_ffi" ]

  subsystem_name = "communication"
  part_name = "communication_cangjie_api"
  lib_name = "rpc"
}
